@@ -9,6 +9,9 @@ History of changes to PHC (name of developer listed in brackets)::
       topic counts.
       [davisagli]
 
+    - Add getPHCSubNav method for PloneHelpCenter to create subnavigation.
+      [stevem]
+
     PloneHelpCenter 4.0b2 (2010-12-28)
 
     - Fix phc_stats template in Plone 4.
